name:                pnbank-parser
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/JacisNonsense/pnbank-parser#readme
license:             BSD3
license-file:        LICENSE
author:              Jaci Brunning
maintainer:          jaci.brunning@gmail.com
copyright:           Jaci Brunning
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable pnbank-parser
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:        base >= 4.7 && < 5, bytestring, dom-selector >= 0.2.0.1, xml-conduit, html-conduit >= 0.1, conduit,
                        text, parsec >= 3.1.14.0, time >= 1.6.0.1, aeson >= 1.4.6.0